# ECAP5-DWBUART

./: CMakeLists.txt  README.md
.github/workflows/: ci-config.yml  simulate-with-verilator.yml
cmake/: dependency.cmake
config/: synth.conf  traceability-matrix.csv  treq.json  verible-lint.rules
config/gtkwave/config/: ecap5_dwbuart.gtkw  ecap5_wbuart.gtkw  rx_frontend.gtkw  tx_frontend.gtkw  wb_interface.gtkw
config/gtkwave/filters/: ecap5_wbuart_testcase_filter.gtkw  rx_frontend_state_filter.gtkw  rx_frontend_testcase_filter.gtkw  tx_frontend_state_filter.gtkw  tx_frontend_testcase_filter.gtkw  wb_interface_testcase_filter.gtkw
docs/: CMakeLists.txt
docs/src/: conf.py  index.rst
docs/src/_ext/: requirement.py
docs/src/_static/css/: custom.css
docs/src/arch/: 1_introduction.rst  2_functional-description.rst  2_overall-description.rst  3_requirements.rst  4_configuration.rst  5_architecture.rst  6_software.rst  index.rst
docs/src/arch/content/: register-table.rst  uart_cr.rst  uart_rxdr.rst
docs/src/assets/: architecture.drawio  uart.drawio  wishbone-read.json  wishbone-write.json
docs/src/guide/: registers.rst
docs/src/spec/: 1_introduction.rst  2_overall-description.rst  3_requirements.rst  4_configuration.rst  index.rst
docs/src/spec/content/: uart_cr.rst  uart_rxdr.rst  uart_sr.rst  uart_txdr.rst
src/: ecap5_dwbuart.sv  ecap5_wbuart.sv  rx_frontend.sv  rx_shiftreg.sv  tx_frontend.sv  wb_interface.sv
tests/: CMakeLists.txt
tests/benches/ecap5_dwbuart/: tb_ecap5_dwbuart.cpp  tb_ecap5_dwbuart.sv
tests/benches/ecap5_wbuart/: tb_ecap5_wbuart.cpp  tb_ecap5_wbuart.sv
tests/benches/rx_frontend/: tb_rx_frontend.cpp  tb_rx_frontend.sv
tests/benches/tx_frontend/: tb_tx_frontend.cpp  tb_tx_frontend.sv
tests/benches/wb_interface/: tb_wb_interface.cpp  tb_wb_interface.sv
